# app.hellojade.be

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.ovh.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration_create_all_tables.py  002_add_call_metadata.py  003_add_call_retry_fields.py  004_add_interrupted_status.py  005_create_questions_table.py  006_add_phone_invalid_fields.py  007_add_new_questionnaire_fields.py  008_add_question_type.py  009_add_follow_up_questions_fields.py  010_add_patient_documents.py  011_add_questionnaires_and_assignments.py  012_fix_questionnaire_assignment_uniques.py  013_add_manual_recall_fields.py  014_add_proche_questionnaire_to_assignments.py  __init__.py
backend/app/: __init__.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  analytics.py  auth.py  calls.py  dashboard.py  documents.py  hl7_receiver.py  patients.py  reports.py  simulation.py  websocket.py
backend/app/cli/: __init__.py  clear_pdf_reports.py
backend/app/core/: __init__.py  config.py  logging.py  metrics.py  security.py
backend/app/data/medications/: anti_inflammatoires.json  antidouleurs.json
backend/app/middleware/: rate_limiter.py
backend/app/models/: __init__.py  analysis.py  audit_log.py  call.py  care_unit.py  document.py  patient.py  question.py  questionnaire.py  report.py  setting.py  transcription.py  user.py
backend/app/schemas/: __init__.py  analysis.py  audit_log.py  call.py  care_unit.py  patient.py  question.py  report.py  token.py  transcription.py  user.py
backend/app/services/: __init__.py  audit_service.py  cache_service.py  call_settings_service.py  config_service.py  gdpr_service.py  hl7_adt_service.py  hl7_epicura_service.py  predictive_analytics_service.py  report_service.py  saml_service.py
backend/app/services/ai/: __init__.py  azure_stt_service.py  azure_tts_service.py  medication_normalizer.py  medication_vocabulary.py  mistral_service.py
backend/app/services/telephony/: __init__.py  asterisk_ari_service.py  questionnaire.py  questionnaire_loader.py  questionnaire_metadata_repair.py
backend/app/tasks/: __init__.py  report_tasks.py  scheduler_tasks.py
backend/monitoring/loki/: loki-config.yml
backend/monitoring/prometheus/: alerts.yml  prometheus.yml
backend/monitoring/promtail/: promtail-config.yml
backend/scripts/: __init__.py  backup_postgres.py  cleanup_and_setup.py  cleanup_calls_only.py  cleanup_interrupted_calls.py  cleanup_stuck_calls.py  create_admin.py  create_patients.py  create_questionnaire_via_api.py  delete_call.py  fix_call_status.py  generate_static_audio.py  generate_technical_docx.py  import_questionnaire.py  init_db.py  repair_questionnaire_metadata.py  seed_mock_data.py
backend/tests/: conftest.py  test_admin_questionnaire.py  test_auth.py  test_calls.py  test_mistral_service.py  test_patients.py
backend/tests/e2e/: __init__.py  test_user_journey.py
backend/tests/integration/: __init__.py
frontend/: index.html
frontend/assets/: html2canvas.esm-BPY6V10C.js  index-B6hEL54U.css  index-BGduZbtK.js  index-BXUkc2o5.css  index-CowHvPXR.js  index-J9GRre1X.js  (+8 more)
keycloak/: epicura-realm.json
nginx/: nginx.conf
(+6 files in other folders)
